--- a/app/templates/base_pots.html
+++ b/app/templates/base_pots.html
@@ -119,7 +119,8 @@
                 <form class="user validation-form" method="POST">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Edit Budget</h5>
+                            <h5 class="modal-title">Edit {% if is_budget %} budget {% else %} savings pot {% endif
+                                %}</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
